--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,8 @@
     "quotes": ["error", "single"],
     "indent": ["error", 2],
     "react/react-in-jsx-scope": "off",
-    "semi": ["error", "never"]
+    "semi": ["error", "never"],
+    "@typescript-eslint/no-unused-vars": "off"
   }
   
 }
