--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
@@ -15,6 +18,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.16",
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "classnames": "^2.5.1",
     "graphql": "^16.8.1",
     "loaders.css": "^0.1.2",
@@ -23,7 +27,9 @@
     "react-dom": "^18.2.0",
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.23.0",
-    "tailwindcss": "^3.4.3"
+    "rollup-plugin-visualizer": "^5.12.0",
+    "tailwindcss": "^3.4.3",
+    "vite-plugin-pwa": "^0.20.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.0.3",
@@ -31,6 +37,8 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript": "^4.0.7",
     "@graphql-codegen/typescript-operations": "^4.2.1",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@types/lodash": "^4.17.4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -46,10 +54,12 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
     "globals": "^15.4.0",
+    "jsdom": "^24.1.0",
     "postcss": "^8.4.38",
     "sass": "^1.77.4",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.12.0",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vitest": "^1.6.0"
   }
 }
